--- a/Services/text-service/docker-compose.yaml
+++ b/Services/text-service/docker-compose.yaml
@@ -1,22 +1,22 @@
 name: typerush-textservice-deployment
 
 services:
-  # typerush-textservice:
-  #   image: hatohui/typerush-textservice:latest
-  #   build: .
-  #   container_name: typerush-textservice
-  #   ports:
-  #     - "8000:8000"
-  #   environment:
-  #     - LOG_OUTPUT_URL=http://log-output:8080/logs
-  #   restart: always
-  typerush-textservice-db:
+  mongo:
+    image: mongo
+    restart: always
+    ports:
+      - 27017:27017
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: 12345
+
+  mongo-express:
     image: mongo-express
     restart: always
     ports:
       - 8081:8081
     environment:
-      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
+      ME_CONFIG_MONGODB_URL: mongodb://root:12345@mongo:27017/
       ME_CONFIG_BASICAUTH_ENABLED: true
-      ME_CONFIG_BASICAUTH_USERNAME: mongoexpressuser
-      ME_CONFIG_BASICAUTH_PASSWORD: mongoexpresspass
+      ME_CONFIG_BASICAUTH_USERNAME: admin
+      ME_CONFIG_BASICAUTH_PASSWORD: 12345
