feat: refactor record service structure and implement new features
- Changed the start:dev script to dev in package.json for consistency.
- Added @prisma/client dependency to package.json.
- Updated schema.prisma to enforce non-nullable modeId and adjusted relations.
- Removed unused AppController and AppService files.
- Enhanced AppModule to include PersonalRecordModule and global exception handling.
- Implemented custom HTTP exception filter for better error management.
- Created middleware for logging requests.
- Developed PersonalRecord module with controller, service, and repository for handling personal records.
- Added various custom exception classes for better error handling.
- Established Prisma service for database interactions and connection management.
- Created migration files for initial database setup.

--- a/Services/record-service/.env.example
+++ b/Services/record-service/.env.example
@@ -1,2 +1,2 @@
-DATABASE_URL=postgresql://admin:password@recordservice-db:5432/recorddb
+DATABASE_URL=postgresql://admin:password@localhost:5433/recorddb
 PORT=9000
