--- a/Services/game-service/package.json
+++ b/Services/game-service/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "clean": "rm -rf dist coverage",
     "test": "jest --coverage",
-    "build": "npx tsc && npm run drizzle:generate && npm run test",
+    "build": "npx tsc && npm run drizzle:generate",
     "start": "node dist/db/migrate-standalone.js && node dist/index.js",
     "dev": "npm run docker:up && npm run drizzle:generate && npm run drizzle:migrate && nodemon",
     "dev1": "nodemon src/app.ts",
