--- a/Services/text-service/.env.example
+++ b/Services/text-service/.env.example
@@ -1,2 +1,5 @@
-MONGO_DB=mongodb://root:12345@localhost:27017/
-PORT=5001
+PORT=8000
+AWS_REGION=ap-southeast-2
+DYNAMODB_TABLE_NAME=wordsntexts
+BEDROCK_AGENT_ID=
+BEDROCK_AGENT_ALIAS=
