--- a/.github/workflows/text-service-ci.yaml
+++ b/.github/workflows/text-service-ci.yaml
@@ -34,7 +34,7 @@ jobs:
           pip install -r requirements.txt
 
       - name: Check syntax
-        run: python -m py_compile main.py controllers/todo_controller.py models/Todo.py
+        run: python -m py_compile main.py controllers/text_controller.py models/schemas.py
 
       - name: Check if application starts
         run: timeout 10s python main.py || test $? = 124
