--- a/Services/text-service/deploy/buildspec.yml
+++ b/Services/text-service/deploy/buildspec.yml
@@ -3,7 +3,9 @@ version: 0.2
 env:
   variables:
     PYTHON_VERSION: "3.12"
-    FUNCTION_NAME: "text-service"
+    FUNCTION_NAME: "text_service"
+  # These are set in CodeBuild project or Parameter Store - NOT hardcoded here
+  # AWS_REGION, DYNAMODB_TABLE_NAME, BEDROCK_AGENT_ID, BEDROCK_AGENT_ALIAS
 
 phases:
   install:
