feat: Implement game timer hook for multiplayer and practice modes
feat: Add typing logic hook with character evaluation and overflow handling

feat: Create typing stats hook to calculate accuracy and WPM

feat: Develop Wave Rush game logic and round management

feat: Build game page with practice mode integration

feat: Create game room page with multiplayer functionality and lobby settings

feat: Establish main layout with navigation and footer components

feat: Implement leaderboard page with mock data and filtering

feat: Add landing page component

feat: Set up Axios instance for API requests

feat: Create Zustand store for game state management

feat: Implement player position calculation for Wave Rush scoring

chore: Configure TypeScript for app and node environments

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,8 +1,1 @@
-# Environment Variables for Health Dashboard
-
-# API Base URL - Update this to your API Gateway URL after deployment
-# For local development, use the service ports directly
-VITE_API_BASE_URL=http://localhost:3000/api
-
-# Production example (update after deployment):
-# VITE_API_BASE_URL=https://api.typerush.com/api
+VITE_API_URL=http://localhost:3000/api
