--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,22 +1,48 @@
 {
-  "name": "typerush-health-dashboard",
-  "version": "1.0.0",
+  "name": "portfolio",
   "private": true,
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "@gsap/react": "^2.1.2",
+    "@tailwindcss/vite": "^4.1.12",
+    "antd": "^5.27.4",
+    "axios": "^1.12.0",
+    "gsap": "^3.13.0",
+    "html-to-image": "^1.11.13",
+    "lodash.throttle": "^4.1.1",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
+    "react-router": "^7.8.2",
+    "react-router-dom": "^7.8.2",
+    "recharts": "^3.5.1",
+    "socket.io-client": "^4.8.1",
+    "tailwindcss": "^4.1.12",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "typescript": "^5.5.3",
-    "vite": "^5.4.2"
+    "@eslint/js": "^9.33.0",
+    "@types/lodash.throttle": "^4.1.9",
+    "@types/react": "^19.1.10",
+    "@types/react-dom": "^19.1.7",
+    "@vitejs/plugin-react-swc": "^4.0.0",
+    "eslint": "^9.37.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.3.0",
+    "prettier": "^3.6.2",
+    "typescript": "~5.8.3",
+    "typescript-eslint": "^8.39.1",
+    "vite": "^7.1.2"
   }
 }
