refactor: rename main.py to lambda_handler.py and update all references
- Renamed main.py to lambda_handler.py for better Lambda function naming
- Updated Dockerfile CMD to reference lambda_handler.py
- Updated buildspec.yml to copy lambda_handler.py instead of main.py
- Updated README.md with new uvicorn command (lambda_handler:app)
- Updated TESTING.md with all uvicorn references to lambda_handler:app
- Removed old deploy directory files

--- a/service/text-service/Dockerfile
+++ b/service/text-service/Dockerfile
@@ -8,4 +8,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
 EXPOSE 8000
 
-CMD ["fastapi", "run", "./main.py"]
+CMD ["fastapi", "run", "./lambda_handler.py"]
