Login/Signout with cognito

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,1 +1,6 @@
 VITE_API_URL=http://localhost:3000/api
+VITE_AWS_AUTHORITY=https://ap-southeast-1-8texzarnh.auth.ap-southeast-1.amazoncognito.com
+VITE_AWS_CLIENT_ID=1pvvkk651p59c7m72kemg5vif6
+VITE_AWS_REDIRECT_URI=http://localhost:5173/
+
+
