--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,9 +17,11 @@
     "gsap": "^3.13.0",
     "html-to-image": "^1.11.13",
     "lodash.throttle": "^4.1.1",
+    "oidc-client-ts": "^3.4.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-oidc-context": "^3.3.0",
     "react-router": "^7.8.2",
     "react-router-dom": "^7.8.2",
     "recharts": "^3.5.1",
